--- a/watch/data/control.html
+++ b/watch/data/control.html
@@ -1,170 +1,287 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ESP32 Dashboard (WebSocket)</title>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/round-slider@1.6.1/dist/roundslider.min.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/round-slider@1.6.1/dist/roundslider.min.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ESP32 Dashboard (WebSocket)</title>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/round-slider@1.6.1/dist/roundslider.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/round-slider@1.6.1/dist/roundslider.min.css">
   <!-- jQuery (bắt buộc cho roundSlider) -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!-- roundSlider -->
-<script src="https://cdn.jsdelivr.net/npm/round-slider@1.6.1/dist/roundslider.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/round-slider@1.6.1/dist/roundslider.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/round-slider@1.6.1/dist/roundslider.min.css">
-<style>
-/* giữ nguyên CSS của bạn */
-body {
-  font-family: "Segoe UI", sans-serif;
-  background: linear-gradient(135deg, #89f7fe, #66a6ff);
-  display: flex;
+  <style>
+    /* giữ nguyên CSS của bạn */
+    body {
+      font-family: "Segoe UI", sans-serif;
+      background: linear-gradient(135deg, #89f7fe, #66a6ff);
+      display: flex;
       flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
       color: #333;
-}
-.card {
-  background: white;
-  border-radius: 15px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-  padding: 25px;
-      text-align: center;
-  width: 95%;
-  max-width: 420px;
     }
+
+    .card {
+      background: white;
+      border-radius: 15px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+      padding: 25px;
+      text-align: center;
+      width: 95%;
+      max-width: 420px;
+    }
+
     h2 {
       margin-bottom: 15px;
-}
-.sensor {
+    }
+
+    .sensor {
       display: flex;
       justify-content: space-around;
       margin-bottom: 20px;
     }
+
     .sensor div {
       font-size: 18px;
       display: flex;
       align-items: center;
       gap: 6px;
     }
+
     .sensor i {
       font-size: 22px;
       color: #0078ff;
     }
+
     #chartContainer {
       width: 100%;
       height: 180px;
       margin-bottom: 25px;
-}
+    }
+
     .knob-container {
       display: flex;
       flex-direction: column;
       align-items: center;
     }
+
     #brightnessKnob {
       margin-top: 10px;
     }
+
     .footer {
       margin-top: 15px;
       font-size: 13px;
       color: #666;
     }
-	.switch {
-	  position: relative;
-	  display: inline-block;
-	  width: 60px;
-	  height: 34px;
-	  margin-top: 15px;
-	}
 
-	.switch input {
-	  opacity: 0;
-	  width: 0;
-	  height: 0;
-	}
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
+      margin-top: 15px;
+    }
 
-	.slider {
-	  position: absolute;
-	  cursor: pointer;
-	  top: 0; left: 0; right: 0; bottom: 0;
-	  background-color: #ccc;
-	  transition: 0.4s;
-	  border-radius: 34px;
-	}
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
 
-	.slider:before {
-	  position: absolute;
-	  content: "";
-	  height: 26px; width: 26px;
-	  left: 4px; bottom: 4px;
-	  background-color: white;
-	  transition: 0.4s;
-	  border-radius: 50%;
-	}
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: 0.4s;
+      border-radius: 34px;
+    }
 
-	input:checked + .slider {
-	  background-color: #4cd964; /* màu xanh kiểu iPhone */
-	}
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      transition: 0.4s;
+      border-radius: 50%;
+    }
 
-	input:checked + .slider:before {
-	  transform: translateX(26px);
-	}
+    .color-row {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      margin: 10px 0;
+    }
 
-  #preview { margin-top: 10px; border: 1px solid #ccc; }
-</style>
+    .color-item {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .color-item label {
+      font-weight: 600;
+      min-width: 40px;
+    }
+
+    .color-item input[type="color"] {
+      width: 40px;
+      height: 30px;
+      border: none;
+      cursor: pointer;
+    }
+
+    .color-item button {
+      padding: 4px 8px;
+      border: none;
+      background-color: #ddd;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .color-item button:hover {
+      background-color: #ccc;
+    }
+
+    .btn {
+      display: block;
+      margin: 15px auto;
+      padding: 8px 16px;
+      background-color: #4caf50;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: 600;
+    }
+
+    .btn:hover {
+      background-color: #45a049;
+    }
+
+
+
+    input:checked+.slider {
+      background-color: #4cd964;
+      /* màu xanh kiểu iPhone */
+    }
+
+    input:checked+.slider:before {
+      transform: translateX(26px);
+    }
+
+    #preview {
+      margin-top: 10px;
+      border: 1px solid #ccc;
+    }
+  </style>
 </head>
 
 <body>
-<div class="card">
-<h2>Bảng điều khiển ESP32</h2>
+  <div class="card">
+    <h2>Bảng điều khiển ESP32</h2>
 
-<div class="sensor">
-  <div>🌡️ <span id="temp">--</span>°C</div>
-  <div>💧 <span id="humi">--</span>%</div>
-</div>
+    <div class="sensor">
+      <div>🌡️ <span id="temp">--</span>°C</div>
+      <div>💧 <span id="humi">--</span>%</div>
+    </div>
 
     <div id="chartContainer">
       <canvas id="sensorChart"></canvas>
     </div>
 
-<div class="knob-container">
-  <label>Độ sáng đèn</label>
-		<div id="brightnessKnob" style="position: relative; display:inline-block;"></div>
-  <label class="switch">
+    <div class="knob-container">
+      <label>Độ sáng đèn</label>
+      <div id="brightnessKnob" style="position: relative; display:inline-block;"></div>
+      <!-- <label class="switch">
     <input type="checkbox" id="lightSwitch" checked>
     <span class="slider"></span>
-  </label>
-</div>
+  </label> -->
 
-	
-	<h3>Upload ảnh và chuyển sang RGB565</h3>
-<input type="file" id="fileInput" accept="image/*">
-  <canvas id="canvas" width="240" height="240" style="display:none;"></canvas>
-  <img id="preview" width="240" height="240" alt="Preview">
-	
+    </div>
+
+    <!-- <div>
+    <label class="switch">
+      <input type="checkbox" id="analogSwitch" checked>
+      <span class="slider"></span> -->
+    <!-- <span id="switchText">Analog Mode</span> -->
+    <!-- </div> -->
+    <div>
+      <label class="switch">
+        <input type="checkbox" id="analogSwitch" checked>
+        <span class="slider"></span>
+      </label>
+      <span id="switchText">Analog Mode</span>
+    </div>
+
+    <div class="color-row">
+      <div class="color-item">
+        <label>Giờ</label>
+        <input type="color" id="hourColor" value="#ff0000">
+      </div>
+      <div class="color-item">
+        <label>Phút</label>
+        <input type="color" id="minuteColor" value="#ff0000">
+        <button id="copyHourToMinute">Copy</button>
+      </div>
+      <div class="color-item">
+        <label>Giây</label>
+        <input type="color" id="secondColor" value="#ff0000">
+        <button id="copyHourToSecond">Copy</button>
+      </div>
+    </div>
+    <div>
+      <button id="sendColorBtn" class="btn">Gửi màu</button>
+    </div>
+
+
+    <h3>Upload ảnh</h3>
+    <input type="file" id="fileInput" accept="image/*">
+    <canvas id="canvas" width="240" height="240" style="display:none;"></canvas>
+    <img id="preview" width="240" height="240" alt="Preview">
+
+    <div>
+      <button id="sendImage" class="btn">Upload</button>
+    </div>
 
     <div class="footer">© 2025 ESP32 Dashboard (WebSocket + Knob + Chart)</div>
-</div>
+  </div>
 
-<script>
-/* ========== WEBSOCKET ========== */
-const ws = new WebSocket(`ws://${location.host}/ws`);
+  <script>
+    /* ========== WEBSOCKET ========== */
+    const ws = new WebSocket(ws://${location.host}/ws);
+    let isUpdatingFromESP = false;
+    let isAnalog = false;
+    ws.onopen = () => {
+      const epoch = Math.floor(Date.now() / 1000);
+      ws.send(JSON.stringify({ epoch }));
+    };
+    /* ========== DOM ========== */
+    const tempEl = document.getElementById("temp");
+    const humiEl = document.getElementById("humi");
 
-/* ========== DOM ========== */
-const tempEl = document.getElementById("temp");
-const humiEl = document.getElementById("humi");
-
-/* ========== CHART ========== */
-const fileInput = document.getElementById("fileInput");
+    /* ========== CHART ========== */
+    const fileInput = document.getElementById("fileInput");
     const canvas = document.getElementById("canvas");
     const ctxWatch = canvas.getContext("2d");
     const preview = document.getElementById("preview");
-
-    fileInput.addEventListener("change", async e => {
-      const file = e.target.files[0];
+    let file;
+    document.getElementById("sendImage").addEventListener("click", async () => {
       if (!file) return;
 
       const img = new Image();
@@ -180,16 +297,18 @@ const fileInput = document.getElementById("fileInput");
       ctxWatch.clearRect(0, 0, 240, 240);
       ctxWatch.drawImage(img, sx, sy, size, size, 0, 0, 240, 240);
 
-      // Hiển thị preview
       preview.src = canvas.toDataURL("image/png");
 
-      // Lấy dữ liệu pixel
       const imageData = ctxWatch.getImageData(0, 0, 240, 240);
       const rgb565 = rgbaToRgb565(imageData.data);
-
       // Upload (ví dụ dùng fetch)
       await uploadRgb565(rgb565);
       alert("Upload thành công!");
+
+    });
+
+    fileInput.addEventListener("change", () => {
+      file = e.target.files[0];
     });
 
     // Hàm chuyển RGBA → RGB565
@@ -215,18 +334,18 @@ const fileInput = document.getElementById("fileInput");
       // Hoặc nếu bạn dùng socket.io:
       // socket.emit("uploadImage", buffer);
     }
-	
-	
+
+
     // Biểu đồ nhiệt độ & độ ẩm
     const ctx = document.getElementById("sensorChart").getContext("2d");
-    
+
     const chartData = {
-  labels: [],
-  datasets: [
+      labels: [],
+      datasets: [
         { label: "Nhiệt độ (°C)", data: [], borderColor: "#ff6b6b", fill: false },
         { label: "Độ ẩm (%)", data: [], borderColor: "#4facfe", fill: false }
-  ]
-};
+      ]
+    };
 
     const sensorChart = new Chart(ctx, {
       type: "line",
@@ -238,59 +357,125 @@ const fileInput = document.getElementById("fileInput");
       }
     });
 
-/* ========== WEBSOCKET RECEIVE ========== */
-ws.onmessage = e => {
-  const data = JSON.parse(e.data);
+    /* ========== WEBSOCKET RECEIVE ========== */
+    ws.onmessage = e => {
+      const data = JSON.parse(e.data);
+      console.log("Received:", e.data);
+      if (data.temp !== undefined) {
+        tempEl.textContent = data.temp.toFixed(1);
+        humiEl.textContent = data.humi.toFixed(1);
 
-  if (data.temp !== undefined) {
-    tempEl.textContent = data.temp.toFixed(1);
-    humiEl.textContent = data.humi.toFixed(1);
+        chartData.labels.push(new Date().toLocaleTimeString());
+        chartData.datasets[0].data.push(data.temp);
+        chartData.datasets[1].data.push(data.humi);
 
-    chartData.labels.push(new Date().toLocaleTimeString());
-    chartData.datasets[0].data.push(data.temp);
-    chartData.datasets[1].data.push(data.humi);
+        if (chartData.labels.length > 10) {
+          chartData.labels.shift();
+          chartData.datasets.forEach(d => d.data.shift());
+        }
+        sensorChart.update();
+      }
 
-    if (chartData.labels.length > 10) {
-      chartData.labels.shift();
-      chartData.datasets.forEach(d => d.data.shift());
-    }
-    chart.update();
-  }
+      if (data.brightness !== undefined) {
+        isUpdatingFromESP = true;
+        $("#brightnessKnob").roundSlider("setValue", data.brightness);
+        isUpdatingFromESP = false;
+      }
 
-  if (data.brightness !== undefined) {
-    $("#brightnessKnob").roundSlider("setValue", data.brightness);
-  }
-};
+      if (data.analog !== undefined) {
+        $("#analogSwitch").prop("checked", data.analog > 0);
+        // isAnalog = data.analog > 0;
+        // $("#analogSwitch").prop("checked", v > 0);
+        // isAnalog =v > 0; 
+      }
+    };
 
-/* ========== KNOB ========== */
-$("#brightnessKnob").roundSlider({
-  radius: 80,
-  width: 14,
+    /* ========== KNOB ========== */
+    $("#brightnessKnob").roundSlider({
+      radius: 80,
+      width: 14,
       handleSize: "+8",
-  sliderType: "min-range",
-  value: 50,
+      sliderType: "min-range",
+      value: 50,
       circleShape: "full",
       startAngle: 315,
-	  endAngle:225,
-  editableTooltip: true,
-  tooltipFormat: e => e.value + "%",
-  change: e => {
-    const v = e.value;
-    $("#lightSwitch").prop("checked", v > 0);
-    updateColor(v);
-    ws.send(JSON.stringify({ brightness: v }));
-  }
-});
+      endAngle: 225,
+      editableTooltip: true,
+      tooltipFormat: e => e.value + "%",
+      change: e => {
 
-function updateColor(v) {
-  const g = Math.round(180 - v * 0.9);
-  $(".rs-range-color").css("background", `rgb(50,${g},255)`);
-}
+        const v = e.value;
+        // $("#lightSwitch").prop("checked", v > 0);
+        updateColor(v);
+        if (isUpdatingFromESP == false) {
+          ws.send(JSON.stringify({ brightness: v }));
+        } else {
+          isUpdatingFromESP = false;
+          return;
+        }
+      },
+      drag: e => {
+        updateColor(v);
+        // $("#lightSwitch").prop("checked", v > 0);
+      }
+    });
 
-/* ========== SWITCH ========== */
-$("#lightSwitch").on("change", function () {
-  $("#brightnessKnob").roundSlider("setValue", this.checked ? 100 : 0);
-});
-</script>
+    function updateColor(v) {
+      const g = Math.round(180 - v * 0.9);
+      $(".rs-range-color").css("background", rgb(50,${g},255));
+    }
+
+    /* ========== SWITCH ========== */
+    // $("#lightSwitch").on("click", function () {
+    //   $("#brightnessKnob").roundSlider("setValue", this.checked ? 100 : 0);
+    //   // const v =  this.checked ? 100 : 0;
+    //   // ws.send(JSON.stringify({ brightness: v }));
+    // });
+
+    $("#analogSwitch").on("change", function () {
+
+      // ws.send(JSON.stringify({ analog: v }));
+      const v = this.checked ? 1 : 0;
+      ws.send(JSON.stringify({ analog: v }));
+    });
+
+    // Copy màu giờ sang phút
+    document.getElementById("copyHourToMinute").addEventListener("click", () => {
+      const hourColor = document.getElementById("hourColor").value;
+      document.getElementById("minuteColor").value = hourColor;
+    });
+
+    // Copy màu giờ sang giây
+    document.getElementById("copyHourToSecond").addEventListener("click", () => {
+      const hourColor = document.getElementById("hourColor").value;
+      document.getElementById("secondColor").value = hourColor;
+    });
+
+    function hexToRGB565(hex) {
+      const r = parseInt(hex.slice(1, 3), 16);
+      const g = parseInt(hex.slice(3, 5), 16);
+      const b = parseInt(hex.slice(5, 7), 16);
+
+      // Dịch bit đúng theo chuẩn RGB565
+      const r5 = (r >> 3) & 0x1F;  // 5 bit
+      const g6 = (g >> 2) & 0x3F;  // 6 bit
+      const b5 = (b >> 3) & 0x1F;  // 5 bit
+
+      return (r5 << 11) | (g6 << 5) | b5;
+    }
+
+    // Gửi màu sang ESP32
+    document.getElementById("sendColorBtn").addEventListener("click", () => {
+      const hour = hexToRGB565(document.getElementById("hourColor").value);
+      const minute = hexToRGB565(document.getElementById("minuteColor").value);
+      const second = hexToRGB565(document.getElementById("secondColor").value);
+
+      const data = { hour, minute, second };
+      ws.send(JSON.stringify({ color: data }));
+      console.log("Sent RGB565:", data);
+    });
+
+  </script>
 </body>
+
 </html>
